[updates]: fix the update body params docs issues
